Feat( WeeklyTeamStats) : add getMemberQuota method to retrieve memberQuota